# Tech_OCR_RAG

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 30fa3a1d54e2_.py  e8aeba27d7a4_init.py  ece117b5ae2a_uuid.py
scripts/: create_user.py
src/: main.py
src/api/: __init__.py  routes.py
src/api/static/: login-mac.css  mac-ui.css
src/api/templates/: infer.html  login.html
src/celery_tasks/: pipeline.py  scheduling.py
src/cloud_io/: gcp_ocr.py  gcs.py
src/llm/: completions.py  embedding_api.py  embeddings.py
src/parsing/: ocr_result.py  sanitize.py
src/services/: ingestion_service.py  retrieval_service.py
src/storage/db/: models.py  read.py  session.py  write.py
src/storage/vector/: read.py  write.py
src/utils/: batch.py  config.py  exceptions.py  logging.py
